--- a/client/src/containers/AssetAdmin/AssetAdmin.scss
+++ b/client/src/containers/AssetAdmin/AssetAdmin.scss
@@ -6,6 +6,7 @@
   min-height: 100%;
   padding-left: 0;
   padding-right: 0;
+  overflow: hidden;
 }
 
 .AssetAdmin {
