--- a/client/src/containers/Gallery/Gallery.scss
+++ b/client/src/containers/Gallery/Gallery.scss
@@ -1,3 +1,25 @@
+.gallery {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.gallery__main {
+  position: relative;
+  overflow: auto;
+  height: 100%;
+}
+
+.editor + .gallery__main {
+  @include media-breakpoint-up(lg) {
+    width: calc(100% - #{$cms-panel-sm});
+  }
+
+  @include media-breakpoint-up(xl) {
+    width: calc(100% - #{$cms-panel-md});
+  }
+}
+
 .gallery__no-item-notice {
   width: 100%;
   text-align: center;
